mock password getting enpoints are removed swagger authendication
